<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditTextPreference
        android:title="Latitude"
        android:key="@string/pref_lat_key"
        android:defaultValue="@string/lat_default"
        android:inputType="text"
        android:singleLine="true" />

    <EditTextPreference
        android:title="Longitude"
        android:key="@string/pref_lon_key"
        android:defaultValue="@string/lon_default"
        android:inputType="text"
        android:singleLine="true" />

    <ListPreference
        android:title="Temperature Units"
        android:key="@string/temp_pref"
        android:entries="@array/TemperatureUnits"
        android:entryValues="@array/TemperatureValues"
        android:defaultValue="@string/TemperatureDefaultValue"
        />
    <CheckBoxPreference
        android:title="@string/pref_enable_notifications_label"
        android:key="@string/pref_enable_notifications_key"
        android:summaryOff="@string/pref_enable_notifications_false"
        android:summaryOn="@string/pref_enable_notifications_true"
        android:defaultValue="@string/pref_enable_notifications_default" />

</PreferenceScreen>